provider and commonUser Registered

--- a/web/src/main/resources/templates/user/signup.html
+++ b/web/src/main/resources/templates/user/signup.html
@@ -17,7 +17,7 @@
 		</script>
 	</head>
 	<body>
-		<form th:action="@{/signup}" th:object="${form}" method="post" action="#">
+		<form th:action="@{/user/signup}" th:object="${user}" method="post" action="#">
 			<label for="name">name:</label>
 			<input type="text" th:field="*{name}" />
 			<p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
@@ -27,15 +27,15 @@
 			<label for="password">password:</label>
 			<input type="text" th:field="*{password}" />
 
-			<label for="confirmPassword">confirmPassword:</label>
+			<!-- <label for="confirmPassword">confirmPassword:</label>
 			<input type="text" th:field="*{confirm}" />
 			<p th:if="${#fields.hasErrors('confirm')}" th:errors="*{confirm}">
 				confirm error
-			</p>
+			</p> -->
 
 			<label for="captcha">captcha:</label>
-			<input type="text" th:field="*{captcha}" />
-			<p th:if="${#fields.hasErrors('name')}" th:errors="*{captcha}">
+			<input type="text" th:name="captcha" />
+			<p th:if="${#fields.hasErrors('captcha')}" th:errors="*{captcha}">
 				captcha error
 			</p>
 
