--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -5,46 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content=""/>
   <title>首页</title>
-  <link rel="stylesheet" type="text/css" th:href="@{css/global.css}"/>
-  <script th:src="@{js/jquery-1.11.2.min.js}"></script>
-  <script type="text/javascript" th:src="@{js/bootstrap.min.js}"></script>
-  <script th:src="@{js/script.js}"></script>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
+  <script th:src="@{/js/jquery-1.11.2.min.js}"></script>
+  <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+  <script th:src="@{/js/script.js}"></script>
 </head>
 <body>
-	<div class="header">
-		<div class="head-box clearfix">
-			<a href="#" class="logo"><img src="img/topic1.jpg" alt="logo" width="165" height="80"/></a>
-			<div class="head-search">
-				<span class="searched">商品</span>
-				<input type="text"/>
-				<i class="icon-search"></i>
-				<div class="search-sort">
-					<a>商品</a>
-					<a>型号</a>
-					<a>品牌</a>
-					<a>专题</a>
-					<a>资讯</a>
-				</div>
-			</div>
-			<div class="head-menu">
-				<a href="/login">登录</a>
-				<span>|</span>
-				<a href="/user/signup">注册</a>
-			</div>
-		</div>
-		<div class="head-nav">
-			<div class="nav-box">
-				<ul>
-					<li class="active nobor"><a href="/productCategory/仪器">仪器</a></li>
-					<li><a href="#">试剂</a></li>
-					<li><a href="#">耗材</a></li>
-					<li><a href="#">服务</a></li>
-					<li><a href="#">专题</a></li>
-					<li><a href="#">资讯</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
+	<div th:include="@{/base/head}"></div>
 	<!-- header -->
 	<div class="wrapper">
 		<div class="screen-one clearfix">
